# chat_2.0

./: CMakeLists.txt  Makefile  README.md  chat.cpp  chat.h  connector.cpp  connector.h  database.cpp  database.h  hash.cpp  hash.h  hashtable.cpp  hashtable.h  indexmap.cpp  indexmap.h  main.cpp  release
data/msgData/: 224768  42752  84352  87424  all
data/userData/: two
msgData/: all
